[metadata]
name = dfd
version = 0.0.1
author = Igor Cichecki
author_email = cicheckiigor@gmail.com
description = Deepfake detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cicheck/dfg
project_urls =
    Bug Tracker = https://github.com/cicheck/dfg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_packages_data = True
install_requires =
    pre-commit

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest-cov==2.12.1
    pytest
flake8 =
    darglint
    flake8
    flake8-isort
    isort
pydocstyle =
    pydocstyle
black =
    black==21.6b0
typing =
    mypy==0.910

# Config

[flake8]
max_line_length = 100
max_local_variables = 9
docstring-convention = google
inline_quotes = "
ignore =
    DAR101

per-file-ignores =
    # Ignore unused imports in __init__.py files
    __init__.py: F401

[mypy]
ignore_missing_imports = True
disallow_untyped_calls = True
warn_return_any = True