[metadata]
name = dfd
version = 0.0.1
author = Igor Cichecki
author_email = cicheckiigor@gmail.com
description = Deepfake detector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cicheck/dfg
project_urls =
    Bug Tracker = https://github.com/cicheck/dfg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_packages_data = True
install_requires =
    click>=8.0.1
    pydantic>=1.8.2
    pyyaml>=5.4.1
    tqdm>=4.62.2
    tensorflow==2.5.0
    opencv-contrib-python==4.5.3.56
    structlog>=21.4.0
    rich>=10.15.2
    dlib==19.22.1


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dfd=dfd.cli.entry_point:entry_point

[options.extras_require]
tests =
    pytest-cov==2.12.1
    pytest>=6.2.4
    coverage[toml]
style =
    darglint>=1.8.0
    flake8>=3.9.2
    flake8-isort>=4.0.0
    isort>=5.9.2
    pydocstyle>=6.1.1
    black>=21.6b0
typing =
    mypy>=0.910
    types-PyYAML>=5.4.10
notebooks =
    matplotlib==3.4.3

# Config

[flake8]
max_line_length = 100
max_local_variables = 9
docstring-convention = google
inline_quotes = "
ignore =
    DAR101
    # Due to issue https://github.com/terrencepreilly/darglint/issues/54
    DAR202
    # This violation will be updated to follow PEP 8 guidelines
    W503

per-file-ignores =
    # Ignore unused imports in __init__.py files
    __init__.py: F401

[mypy]
ignore_missing_imports = True
disallow_untyped_calls = True
warn_return_any = True